tests/int/check_command/snapshots/integration__int__check_command__deny__should_pass_when_no_edge_matches.snap
---
source: tests/int/check_command/deny.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_deny_clean.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
